Improve swagger docs and adding credit card validator
